[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["abe.akira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.0"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
python-dotenv = "^1.0.1"
langgraph = "^0.2.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
